--- a/app/src/main/res/layout/activity_input_case.xml
+++ b/app/src/main/res/layout/activity_input_case.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/parent_scroll_view"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.InputCaseActivity">
 
